# RstyGym

./: .env  .gitignore  Cargo.toml  Test.http  Trunk.toml  index.html  styles.css  styles_min.css
http/: days.http  exercises.http  login.http  routines.http
src/: app.rs  commands.rs  error.rs  libs.rs  macros.rs  main.rs  menu.rs
src-tauri/: .gitignore  Cargo.toml  sqlite.db-shm  sqlite.db-wal  tauri.conf.json
src-tauri/migrations/: 20250215145936_days.down.sql  20250215145936_days.up.sql  20250215150041_exercises.down.sql  20250215150041_exercises.up.sql  20250215150109_series.down.sql  20250215150109_series.up.sql  20250215150117_weeks.down.sql  20250215150117_weeks.up.sql  20250215150132_day_templates.down.sql  20250215150132_day_templates.up.sql  20250215150138_routines.down.sql  20250215150138_routines.up.sql  20250224125902_gym.down.sql  20250224125902_gym.up.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: manage.rs  mod.rs  models.rs
src-tauri/structs/src/: day.rs  day_template.rs  error.rs  exercise.rs  lib.rs  routine.rs  week.rs
src/backend/: mod.rs
src/backend/application/use_cases/: mod.rs
src/backend/application/use_cases/day/: mod.rs  save.rs  update_exercises.rs
src/backend/application/use_cases/exercise/: save.rs
src/backend/application/use_cases/routine/: save.rs
src/backend/domain/repositories/: day_repository.rs  exercise_repository.rs  mod.rs  routine_repository.rs
src/backend/domain/services/: day_service.rs  exercise_service.rs  mod.rs  routine_service.rs
src/backend/infrastructure/: mod.rs  prefill.rs  web.rs
src/backend/infrastructure/db/: connection.rs  mod.rs
src/backend/infrastructure/db/models/: day.rs  exercise.rs  mod.rs  record.rs  routine.rs
src/backend/infrastructure/repositories/: mod.rs  surreal_day_repository.rs  surreal_exercise_repository.rs  surreal_routine_exercise.rs  surreal_routine_repository.rs
src/backend/presentation/: mod.rs  routes.rs
src/backend/presentation/handlers/: day_handlers.rs  exercise_handlers.rs  mod.rs  root_handlers.rs  routine_handlers.rs
src/entities/: day.rs  exercise.rs  mod.rs  routine.rs
src/entities/dtos/: day.rs  exercise.rs  login.rs  mod.rs  routine.rs
src/frontend/: app.rs  lib.rs  mod.rs  structs.rs
src/frontend/pages/: login.rs
src/today/: add_exercise.rs  add_routine.rs  mod.rs  today.rs  today_routine.rs
src/utils/: error.rs
structs/: Cargo.toml
structs/src/: Exercise.rs  day.rs  day_template.rs  error.rs  exercise.rs  lib.rs  routine.rs  week.rs
