[package]
name = "rstygym-ui"
version = "0.1.0"
edition = "2024"
authors = ["RstyDev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sycamore = { version = "0.9.1", features = ["suspense"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.217", features = ["derive"] }
console_error_panic_hook = "0.1.7"
chrono = {version= "0.4.38" ,features = ["serde"] }

[workspace]
members = ["src-tauri", "structs"]

[dependencies.web-sys]
features = ["Location", "Storage","KeyboardEvent"]
version = "0.3.70"

[dependencies.structs]
path = "structs"