[package]
name = "rstygym"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rstygym_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

#[workspace]
#members = ["structs"]

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1"
sqlx = { version= "0.8.2", features = ["sqlite", "runtime-tokio", "tls-rustls", "sqlx-macros", "chrono"] }
chrono = {version= "0.4.38" ,features = ["serde"] }
#thiserror = "2.0.11"
rand = "0.9.0"
dotenv = "0.15.0"
log = "0.4.25"

[dependencies.structs]
path = "../structs"
